css/style.css
* {
    margin: 0;
    padding: 0;
    letter-spacing: 0.05em;
}


@font-face {
    font-family: "OpenSans";
    src: url(../fonts/OpenSans-Regular.woff);
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "OpenSans";
    src: url(../fonts/OpenSans-Bold.woff);
    font-weight: 700;
    font-style: normal;
}

body {
    font-family: OpenSans, Arial, san-serif;
    overflow-x: hidden;
    min-width: 320px;
    /*margin-left: auto;*/
    /*margin-right: auto;*/
}

.header {
    background-image: url(../img/football_767.jpg);
    background-color: #0a0e34;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    min-width: 320px;
}

.header::after {
    content: "";
    background-color: #0a0e34;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0.9;
}

.container {
    position: relative;
    z-index: 1;
    box-sizing: border-box;
}

.svg_text {
    display: flex;
    padding-top: 33px;
}

.logo_text {
    fill: #fff;
    width: 133px;
    margin: 0 auto;
}

.title {
    display: flex;
    flex-direction: column;
    color: #fff;
    font-size: 28px; /* 28px 10vw*/
    margin-top: 132px;
    margin-bottom: 85px;
}

.title_text {
    text-transform: uppercase;
    font-weight: bold;
}

.title_first {
    display: flex;
    margin-left: 18px; /* 18px 5vw*/
    margin-bottom: 21px;
}

.title_second {
    display: flex;
    padding-left: 64px; /* 63px 20vw*/
    box-sizing: border-box;
    width: 320px;
}

.buttons {
    display: flex;
    flex-direction: column;
}

.button {
    /*border: 1px solid black;*/
    border-radius: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #5e42b0;
    width: 280px;
    height: 35px;
    margin-left: auto;
    margin-right: auto;
    text-decoration: none;
    color: #fff;
}

.button_second { /* нельзя использовать nth-child, потому что не перебить другим стилем mb*/
    margin-top: 14px;
    margin-bottom: 84px;
}

.button_brand_logo {
    width: auto;
    height: 24px;
    fill: white;
    padding-right: 10px;
}

.button_text {
    font-size: 8px;
    display: flex;
    flex-direction: column;
    width: 84px;
    font-weight: normal;
}

.section_ppl {
    display: flex;
    flex-direction: column;
}

.section_title {
    font-size: 50px;
    color: #e7e7e7;
    margin-left: 20px;
    margin-top: 24px;
    margin-bottom: 2px;
}

.image_container {
    position: relative;
}

.image {
    position: absolute;
}

.image_footballer {
    left: 70px;
}

.connection {
    background-color: #fafafa;
    margin-top: 225px;
}

.sub_title {
    display: flex;
    padding-top: 50px;
    padding-bottom: 20px;
}

.first_sub_title {
    padding-top: 83px;
}

.sub_title_number {
    font-size: 14px;
    padding-right: 10px;
    padding-left: 20px;
    padding-top: 3px;
    position: relative;
}

.sub_title_number::after {
    content: '';
    background-color: #5e42b0;
    width: 17px;
    height: 4px;
    display: block;
    position: absolute;
    bottom: 7px;
}

.sub_title_text {
    font-size: 23px;
    color: #c1c1c1;
}

.common_text {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 50px;
}

.collaboration {
    background-color: #f5f4f9;
}

.growth_athletes {
    background-color: #5e42b0;
}

.sub_title_number_growth {
    font-size: 14px;
    padding-right: 10px;
    padding-left: 20px;
    padding-top: 3px;
    position: relative;
    color: #8765dd;
}

.sub_title_number_growth::after {
    content: '';
    background-color: #fff;
    width: 17px;
    height: 4px;
    display: block;
    position: absolute;
    bottom: 7px;
}

.text_growth {
    color: #fff;
}

.growth_players {
    background-color: #090c35;
}

.image_action {
    width: 100vw;
    min-width: 320px;
    max-width: 768px;
}

.sub_title_action {
    /*position: relative;*/
}

.sub_title_action_number {
    width: 70px;
    height: 70px;
    position: relative;
    top: -58px;
    left: 20px;
    background-color: #5e42b0;
    color: #fff;
}

.sub_title_action_number::after {
    content: '';
    background-color: #8f7bc8;
    width: 17px;
    height: 4px;
    display: block;
    position: absolute;
    left: 27px;
}

.span_sub_title_action_number {
    display: block;
    padding-top: 20px;
    padding-left: 27px;
}

.sub_title_action_text {
    font-size: 28px;
    color: #e7e7e7;
    padding-left: 20px;
    /*padding-top: 34px;*/
    /*margin-bottom: 14px;*/
    position: relative;
    top: -24px;
}

.common_text_action, .common_text_action_last {
    font-size: 16px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 77px;
}

.common_text_action_last {
    padding-bottom: 67px;
}

.footer {
    box-sizing: border-box;
    background-image: url(../img/game_767.jpg);
    background-color: #0a0e34;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    min-width: 320px;
    padding-top: 99px;
    padding-bottom: 10px;
}

.footer::after {
    content: "";
    background-color: #0a0e34;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0.9;
}

.svg {
    display: flex;
    width: 72px;
    height: 74px;
    border-radius: 12px;
    margin: 0 auto 59px;
    background-color: #6a4cc3;
}

.logo {
    margin: 12px 6px;
    width: 60px;
    fill: white;
}

.download_text {
    width: 280px; /* иначе mr и ml auto не срабатывают */
    margin-right: auto;
    margin-left: auto;
}

.first_line {
    display: flex;
    font-size: 32px;
    color: white;
    letter-spacing: 0.04em;
}

.second_line {
    display: flex;
    font-size: 14px;
    color: #9b8ec1;
    margin: 0 auto 77px;
}

.last_margin {
    margin-bottom: 51px;
}

